[gd_scene load_steps=8 format=3 uid="uid://dlxl0dsaj7hws"]

[ext_resource type="Script" path="res://scenes/main/main_menu.gd" id="1_otjms"]
[ext_resource type="PackedScene" uid="uid://bh68ke5pd617u" path="res://scenes/entities/characters/player/character_body_2d.tscn" id="2_01mn5"]
[ext_resource type="Texture2D" uid="uid://bq2ecow3063s2" path="res://assets/level/backgrounds/set2_tiles.png" id="2_eluch"]
[ext_resource type="Texture2D" uid="uid://d0pxna4yi6svm" path="res://assets/level/backgrounds/set1_tiles.png" id="2_q4xyl"]
[ext_resource type="Texture2D" uid="uid://cgxc1wnbj8dl7" path="res://assets/level_select/level map.jpg" id="2_tdlx8"]
[ext_resource type="AudioStream" uid="uid://c6dba470rppon" path="res://assets/audio/sounds/hitHurt.wav" id="3_hsukn"]

[sub_resource type="LabelSettings" id="LabelSettings_4oek7"]
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 0
shadow_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_otjms")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.648227, 0.702757, 0.872723, 1)

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 1
offset_left = 1107.0
offset_top = 261.0
offset_right = 1747.0
offset_bottom = 741.0
rotation = -3.82128
scale = Vector2(2.2, 2.2)
texture = ExtResource("2_eluch")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1250.0
offset_top = 780.0
offset_right = -610.0
offset_bottom = 1260.0
grow_horizontal = 0
rotation = -0.861724
scale = Vector2(2.2, 2.2)
texture = ExtResource("2_q4xyl")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = -406.0
offset_top = -1435.0
offset_right = 1515.0
offset_bottom = -354.0
rotation = 1.08036
texture = ExtResource("2_tdlx8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.5
offset_top = -64.0
offset_right = 88.5
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenuLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Temporary Main Menu"
label_settings = SubResource("LabelSettings_4oek7")
horizontal_alignment = 1

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="VBoxContainer/ContinueButton"]
stream = ExtResource("3_hsukn")

[node name="LevelSelectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level Select"

[node name="MuteButton" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Mute Music"

[node name="TouchControlsButton" type="CheckButton" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "On-Screen Touch Controls"

[node name="AdminControlsButton" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Admin Controls"

[node name="Character1Holder" type="Control" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="Character1" parent="Character1Holder" instance=ExtResource("2_01mn5")]
position = Vector2(150, 0)

[node name="Character2Holder" type="Control" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="Character2" parent="Character2Holder" instance=ExtResource("2_01mn5")]
position = Vector2(-150, 0)

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="toggled" from="VBoxContainer/MuteButton" to="." method="_on_mute_button_toggled"]
[connection signal="toggled" from="VBoxContainer/TouchControlsButton" to="." method="_on_touch_controls_button_toggled"]
[connection signal="toggled" from="VBoxContainer/AdminControlsButton" to="." method="_on_admin_controls_button_toggled"]
